--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,140 +3,55 @@
 
     {% if user.is_authenticated %}
         <div class="col d-flex justify-content-center">
-            <div class="card w-50 d-none d-sm-flex"> <!-- show normally on md and above -->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <!-- Container wrapper -->
-                    <div class="container-fluid">
-                        <!-- Toggle button -->
-                        <button
-                                class="navbar-toggler"
-                                type="button"
-                                data-mdb-toggle="collapse"
-                                data-mdb-target="#navbarCenteredExample"
-                                aria-controls="navbarCenteredExample"
-                                aria-expanded="false"
-                                aria-label="Toggle navigation"
-                        >
-                            <i class="fas fa-bars"></i>
-                        </button>
+        <div class="card w-50 d-none d-sm-flex"> <!-- show normally on md and above -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
 
-                        <!-- Collapsible wrapper -->
-                        <div
-                                class="collapse navbar-collapse justify-content-center"
-                                id="navbarCenteredExample"
-                        >
-                            <!-- Left links -->
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
-                                </li>
-                            </ul>
-                            <!-- Left links -->
-                        </div>
-                        <!-- Collapsible wrapper -->
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
                     </div>
-                    <!-- Container wrapper -->
-                </nav>
-
-                <div class="justify-content-center" align="center">
-                    <div class="row">
-                    </div>
-
-                    {% if has_main %}
-
-                        <h2> Your progress on your main goal:</h2>
-
-                        <div class="chart_progm">
-                        </div>
-
-                        <div class="row">
-                            <br>
-                            <p>{{ maingoal.name }} of type: {{ maingoal.type }} <br>
-                                to reach {{ maingoal.criteria }}
-                                {% if is_fq %}
-                                    Journeys
-                                {% else %}
-                                    € in travel costs
-                                {% endif %} <br>
-                                between {{ maingoal.startdate|date:'d.m.y' }} and {{ maingoal.enddate|date:'d.m.y' }} <br>
-                            </p>
-                        </div>
-
-                    {% else %}
-
-                        <h2> Please set a main goal to display on your home screen</h2>
-
-                    {%  endif %}
-
-                    <div class="row">
-                        <div class="container p-2">
-                            <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
-                                <i class="fas fa-plus mr-1"></i>
-                                ADD
-                            </a>
-                        </div>
-                    </div>
-
-                    <div>
-                        <a href="{% url 'logout' %}">Logout</a>
-                    </div>
+                    <!-- Collapsible wrapper -->
                 </div>
-            </div>
-            <div class="card w-100 d-sm-none">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <!-- Container wrapper -->
-                    <div class="container-fluid">
-                        <!-- Toggle button -->
-                        <button
-                                class="navbar-toggler"
-                                type="button"
-                                data-mdb-toggle="collapse"
-                                data-mdb-target="#navbarCenteredExample"
-                                aria-controls="navbarCenteredExample"
-                                aria-expanded="false"
-                                aria-label="Toggle navigation"
-                        >
-                            <i class="fas fa-bars"></i>
-                        </button>
+                <!-- Container wrapper -->
+            </nav>
 
-                        <!-- Collapsible wrapper -->
-                        <div
-                                class="collapse navbar-collapse justify-content-center"
-                                id="navbarCenteredExample"
-                        >
-                            <!-- Left links -->
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
-                                </li>
-                            </ul>
-                            <!-- Left links -->
-                        </div>
-                        <!-- Collapsible wrapper -->
-                    </div>
-                    <!-- Container wrapper -->
-                </nav>
-                <div class="justify-content-center" align="center">
-                    <div class="row">
-                        <br>
-                    </div>
+            <div class="justify-content-center" align="center">
+                <div class="row">
+                </div>
 
-                    {% if has_main %}}
+                {% if has_main %}
 
                     <h2> Your progress on your main goal:</h2>
 
@@ -156,27 +71,113 @@
                         </p>
                     </div>
 
-                    {% else %}
+                {% else %}
 
-                     <h2> Please set a main goal to display on your home screen</h2>
+                    <h2> Please set a main goal to display on your home screen</h2>
 
-                    {%  endif %}
+                {% endif %}
 
-                    <div class="row">
-                        <div class="container p-2">
-                            <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
-                                <i class="fas fa-plus mr-1"></i>
-                                ADD
-                            </a>
-                        </div>
-                    </div>
-
-                    <div>
-                        <a href="{% url 'logout' %}">Logout</a>
+                <div class="row">
+                    <div class="container p-2">
+                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                            <i class="fas fa-plus mr-1"></i>
+                            ADD
+                        </a>
                     </div>
                 </div>
-            </div>
 
+                <div>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
+            </div>
+        </div>
+        <div class="card w-100 d-sm-none">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
+
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
+                    </div>
+                    <!-- Collapsible wrapper -->
+                </div>
+                <!-- Container wrapper -->
+            </nav>
+
+            <div class="justify-content-center" align="center">
+                <div class="row">
+                </div>
+
+                {% if has_main %}
+
+                    <h2> Your progress on your main goal:</h2>
+
+                    <div class="chart_prog">
+                    </div>
+
+                    <div class="row">
+                        <br>
+                        <p>{{ maingoal.name }} of type: {{ maingoal.type }} <br>
+                            to reach {{ maingoal.criteria }}
+                            {% if is_fq %}
+                                Journeys
+                            {% else %}
+                                € in travel costs
+                            {% endif %} <br>
+                            between {{ maingoal.startdate|date:'d.m.y' }} and {{ maingoal.enddate|date:'d.m.y' }} <br>
+                        </p>
+                    </div>
+
+                {% else %}
+
+                    <h2> Please set a main goal to display on your home screen</h2>
+
+                {% endif %}
+
+                <div class="row">
+                    <div class="container p-2">
+                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                            <i class="fas fa-plus mr-1"></i>
+                            ADD
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
+            </div>
         </div>
         <script>
             let fact = 1.1;
