--- a/app/templates/app/see_data.html
+++ b/app/templates/app/see_data.html
@@ -96,6 +96,8 @@
 
                     <div>
                         <a href="{% url 'logout' %}">Logout</a>
+                        <br>
+                        <a href="{% url 'delete_all' %}">Delete All</a>
                     </div>
                 </div>
             </div>
