--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -14,7 +14,7 @@
                 <h3 class="card-title text-center">Signup for KlimaticketR</h3>
                 <div class="card-text">
                     <form method="POST">{% csrf_token %}
-                        {{ form|crispy }}
+                        {{ form.as_p }}
                         <button type="submit" class="btn btn-primary btn-rounded btn-block">Sign Up</button>
                         
                         <div class="sign-up">
